data/derived/fa15/progs/unify/prog0469.ml.out
Characters 60-71:
  else n mod 10 :: digitsOfInt;;
                   ^^^^^^^^^^^
Error: This expression has type int -> int list
       but an expression was expected of type int list
